--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
-    "vue": "^3.2.11"
+    "vue": "^2.6.14"
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.2.11",
     "nodemon": "^2.0.12",
+    "vue-loader-v16": "^16.0.0-beta.5.4",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
