--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "vue": "^3.2.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "@vue/compiler-sfc": "^3.2.11",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
     "nodemon": "^2.0.12",
+    "style-loader": "^3.2.1",
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0"
