--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/compiler-sfc": "^3.2.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
     "nodemon": "^2.0.12",
     "style-loader": "^3.2.1",
     "vue-loader-v16": "^16.0.0-beta.5.4",
